--- a/environment.yml
+++ b/environment.yml
@@ -2,135 +2,135 @@ name: DDS_project_env
 channels:
   - defaults
 dependencies:
-  - anyio=3.5.0=py310hca03da5_0
-  - appnope=0.1.2=py310hca03da5_1001
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py310h1a28f6b_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - async-lru=2.0.4=py310hca03da5_0
-  - attrs=23.1.0=py310hca03da5_0
-  - babel=2.11.0=py310hca03da5_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.12.2=py310hca03da5_0
-  - blas=1.0=openblas
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - bottleneck=1.3.5=py310h96f19d2_0
-  - branca=0.6.0=py310hca03da5_0
-  - brotlipy=0.7.0=py310h1a28f6b_1002
-  - bzip2=1.0.8=h620ffc9_4
-  - ca-certificates=2023.12.12=hca03da5_0
-  - certifi=2023.11.17=py310hca03da5_0
-  - cffi=1.16.0=py310h80987f9_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - comm=0.1.2=py310hca03da5_0
-  - cryptography=41.0.7=py310hd4332d6_0
-  - debugpy=1.6.7=py310h313beb8_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - exceptiongroup=1.0.4=py310hca03da5_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=h313beb8_0
-  - folium=0.14.0=py310hca03da5_0
-  - idna=3.4=py310hca03da5_0
-  - ipykernel=6.25.0=py310h33ce5c2_0
-  - ipython=8.15.0=py310hca03da5_0
-  - ipywidgets=8.0.4=py310hca03da5_0
-  - jedi=0.18.1=py310hca03da5_1
-  - jinja2=3.1.2=py310hca03da5_0
-  - json5=0.9.6=pyhd3eb1b0_0
-  - jsonschema=4.19.2=py310hca03da5_0
-  - jsonschema-specifications=2023.7.1=py310hca03da5_0
-  - jupyter-lsp=2.2.0=py310hca03da5_0
-  - jupyter_client=8.6.0=py310hca03da5_0
-  - jupyter_core=5.5.0=py310hca03da5_0
-  - jupyter_events=0.8.0=py310hca03da5_0
-  - jupyter_server=2.10.0=py310hca03da5_0
-  - jupyter_server_terminals=0.4.4=py310hca03da5_1
-  - jupyterlab=4.0.8=py310hca03da5_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.25.1=py310hca03da5_0
-  - jupyterlab_widgets=3.0.9=py310hca03da5_0
-  - libcxx=14.0.6=h848a8c0_0
-  - libffi=3.4.4=hca03da5_0
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libopenblas=0.3.21=h269037a_0
-  - libsodium=1.0.18=h1a28f6b_0
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - markupsafe=2.1.3=py310h80987f9_0
-  - matplotlib-inline=0.1.6=py310hca03da5_0
-  - mistune=2.0.4=py310hca03da5_0
-  - nbclient=0.8.0=py310hca03da5_0
-  - nbconvert=7.10.0=py310hca03da5_0
-  - nbformat=5.9.2=py310hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - nest-asyncio=1.5.6=py310hca03da5_0
-  - notebook=7.0.6=py310hca03da5_0
-  - notebook-shim=0.2.3=py310hca03da5_0
-  - numexpr=2.8.7=py310hecc3335_0
-  - numpy=1.26.3=py310h3b2db8e_0
-  - numpy-base=1.26.3=py310ha9811e2_0
-  - openssl=3.0.12=h1a28f6b_0
-  - overrides=7.4.0=py310hca03da5_0
-  - packaging=23.1=py310hca03da5_0
-  - pandas=2.1.4=py310h46d7db6_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pip=23.3.1=py310hca03da5_0
-  - platformdirs=3.10.0=py310hca03da5_0
-  - plotly=5.9.0=py310hca03da5_0
-  - prometheus_client=0.14.1=py310hca03da5_0
-  - prompt-toolkit=3.0.43=py310hca03da5_0
-  - psutil=5.9.0=py310h1a28f6b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py310hca03da5_1
-  - pyopenssl=23.2.0=py310hca03da5_0
-  - pysocks=1.7.1=py310hca03da5_0
-  - python=3.10.13=hb885b13_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py310hca03da5_0
-  - python-json-logger=2.0.7=py310hca03da5_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2023.3.post1=py310hca03da5_0
-  - pyyaml=6.0.1=py310h80987f9_0
-  - pyzmq=25.1.0=py310h313beb8_0
-  - readline=8.2=h1a28f6b_0
-  - referencing=0.30.2=py310hca03da5_0
-  - requests=2.31.0=py310hca03da5_0
-  - rfc3339-validator=0.1.4=py310hca03da5_0
-  - rfc3986-validator=0.1.1=py310hca03da5_0
-  - rpds-py=0.10.6=py310hf0e4da2_0
-  - send2trash=1.8.2=py310hca03da5_0
-  - setuptools=68.2.2=py310hca03da5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sniffio=1.2.0=py310hca03da5_1
-  - soupsieve=2.5=py310hca03da5_0
-  - sqlite=3.41.2=h80987f9_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tenacity=8.2.2=py310hca03da5_0
-  - terminado=0.17.1=py310hca03da5_0
-  - tinycss2=1.2.1=py310hca03da5_0
-  - tk=8.6.12=hb8d0fd4_0
-  - tomli=2.0.1=py310hca03da5_0
-  - tornado=6.3.3=py310h80987f9_0
-  - traitlets=5.7.1=py310hca03da5_0
-  - typing-extensions=4.7.1=py310hca03da5_0
-  - typing_extensions=4.7.1=py310hca03da5_0
-  - tzdata=2023d=h04d1e81_0
-  - urllib3=1.26.16=py310hca03da5_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py310hca03da5_1
-  - websocket-client=0.58.0=py310hca03da5_4
-  - wheel=0.41.2=py310hca03da5_0
-  - widgetsnbextension=4.0.5=py310hca03da5_0
-  - xz=5.4.5=h80987f9_0
-  - yaml=0.2.5=h1a28f6b_0
-  - zeromq=4.3.4=hc377ac9_0
-  - zlib=1.2.13=h5a0b063_0
+  - anyio=3.5.0
+  - appnope=0.1.2
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.0.5
+  - async-lru=2.0.4
+  - attrs=23.1.0
+  - babel=2.11.0
+  - backcall=0.2.0
+  - beautifulsoup4=4.12.2
+  - blas=1.0
+  - bleach=4.1.0
+  - bottleneck=1.3.5
+  - branca=0.6.0
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2023.12.12
+  - certifi=2023.11.17
+  - cffi=1.16.0
+  - charset-normalizer=2.0.4
+  - comm=0.1.2
+  - cryptography=41.0.7
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - exceptiongroup=1.0.4
+  - executing=0.8.3
+  - expat=2.5.0
+  - folium=0.14.0
+  - idna=3.4
+  - ipykernel=6.25.0
+  - ipython=8.15.0
+  - ipywidgets=8.0.4
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - json5=0.9.6
+  - jsonschema=4.19.2
+  - jsonschema-specifications=2023.7.1
+  - jupyter-lsp=2.2.0
+  - jupyter_client=8.6.0
+  - jupyter_core=5.5.0
+  - jupyter_events=0.8.0
+  - jupyter_server=2.10.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab=4.0.8
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.25.1
+  - jupyterlab_widgets=3.0.9
+  - libcxx=14.0.6
+  - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libopenblas=0.3.21
+  - libsodium=1.0.18
+  - llvm-openmp=14.0.6
+  - markupsafe=2.1.3
+  - matplotlib-inline=0.1.6
+  - mistune=2.0.4
+  - nbclient=0.8.0
+  - nbconvert=7.10.0
+  - nbformat=5.9.2
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - notebook=7.0.6
+  - notebook-shim=0.2.3
+  - numexpr=2.8.7
+  - numpy=1.26.3
+  - numpy-base=1.26.3
+  - openssl=3.0.12
+  - overrides=7.4.0
+  - packaging=23.1
+  - pandas=2.1.4
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=23.3.1
+  - platformdirs=3.10.0
+  - plotly=5.9.0
+  - prometheus_client=0.14.1
+  - prompt-toolkit=3.0.43
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pygments=2.15.1
+  - pyopenssl=23.2.0
+  - pysocks=1.7.1
+  - python=3.10.13
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.2
+  - python-json-logger=2.0.7
+  - python-tzdata=2023.3
+  - pytz=2023.3.post1
+  - pyyaml=6.0.1
+  - pyzmq=25.1.0
+  - readline=8.2
+  - referencing=0.30.2
+  - requests=2.31.0
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rpds-py=0.10.6
+  - send2trash=1.8.2
+  - setuptools=68.2.2
+  - six=1.16.0
+  - sniffio=1.2.0
+  - soupsieve=2.5
+  - sqlite=3.41.2
+  - stack_data=0.2.0
+  - tenacity=8.2.2
+  - terminado=0.17.1
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - tomli=2.0.1
+  - tornado=6.3.3
+  - traitlets=5.7.1
+  - typing-extensions=4.7.1
+  - typing_extensions=4.7.1
+  - tzdata=2023d
+  - urllib3=1.26.16
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.58.0
+  - wheel=0.41.2
+  - widgetsnbextension=4.0.5
+  - xz=5.4.5
+  - yaml=0.2.5
+  - zeromq=4.3.4
+  - zlib=1.2.13
   - pip:
       - click==8.1.7
       - click-plugins==1.1.1
